--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">I’ve always been extremely interested in computing and logical problem solving. My sister and I were always on our computers growing up, and I always wanted to know how computers worked, why they worked and what else they could do. This interest never left me, and only grew more profound and passionate over time.</p>
+                                    <p class="text-muted">Hi, and welcome to my Website! I am a 3rd year Computer Science Student at the University of Ottawa. I'm a big fan of Scheme, a finctional programming language and one of the main dialects of Lisp. I’ve always been extremely interested in computing and logical problem solving. My sister and I were always on our computers growing up, and I always wanted to know how computers worked, why they worked and what else they could do. This interest never left me, and only grew more profound and passionate over time.</p>
                                 </div>
                             </div>
                         </li>
@@ -157,9 +157,9 @@
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">
-                                    My interest in computing has not been restricted to the classroom and university life. During my studies, I started a company fixing old Apple Computers and reselling them. I learned how to deal and negotiate with people, and how to be creative, troubleshoot and coming up with new ideas. I also learned the difficulties of managing a company, but that hard and well thought out work, can have many rewards. Being a good leader can direct the team to greater success. This practical experience has given me some technical abilities and a good grasp of the command line which will undoubtedly be helpful in my learing.</p>
+                                        My interest in computing has not been restricted to the classroom and university life. During my studies, I started a company fixing old Apple Computers and reselling them. I learned how to deal and negotiate with people, and how to be creative, troubleshoot and coming up with new ideas. I also learned the difficulties of managing a company, but that hard and well thought out work, can have many rewards. Being a good leader can direct the team to greater success. This practical experience has given me some technical abilities and a good grasp of the command line which will undoubtedly be helpful in my learing.</p>
                                     <p class="text-muted">
-                                    I enjoy educating myself on current events and learning about what is going on around the world. My family and friends are very important to me and make time to spend it with them.</p>
+                                        I enjoy educating myself on current events and learning about what is going on around the world.</p>
                                 </div>
                             </div>
                         </li>
@@ -197,8 +197,8 @@
                     <h6 class="service-heading">2014 - Present</h6>
                     <p class="text-muted">Honours Bachelor of Science: Specialization in Computer Science, Management and Entrepreneurship Option. GPA 3.25/4.00.</p>
                     <p class="text-muted">
-                        <a  href="#other"> Elected member of the Engineering Faculty Council.</a>
-                        </p>
+                        <a href="#other"> Elected member of the Engineering Faculty Council.</a>
+                    </p>
                     <p class="text-muted">
                         Selected Coursework: Data Structures and Algorithms, Databases, Programming Paradigms, Software Engineering, Discrete Math, Discrete Stuctures, Intro to Programming I & II, Digital Systems, Technical Report Writing, Professional Practice in Engineering and Computer Science
                     </p>
