Added more information

--- a/index.html
+++ b/index.html
@@ -108,7 +108,9 @@
 
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Hi, and welcome to my Website! I am a 3rd year Computer Science Student at the University of Ottawa. I'm a big fan of Scheme, a finctional programming language and one of the main dialects of Lisp. I’ve always been extremely interested in computing and logical problem solving. My sister and I were always on our computers growing up, and I always wanted to know how computers worked, why they worked and what else they could do. This interest never left me, and only grew more profound and passionate over time.</p>
+                                    <p class="text-muted">Hi and welcome to my Website! I am a 3rd year Computer Science Student at the University of Ottawa. I'm a big fan of Scheme, a functional programming language and one of the main dialects of Lisp. I’ve always been extremely interested in computing and logical problem solving. My sister and I were always on our computers growing up, and I always wanted to know how computers worked, why they worked and what else they could do. This interest never left me, and only grew more profound and passionate over time.</p>
+                                    <br>
+                                    <p class="text-muted">(You can find me on <a href="https://github.com/flsing/"> Github</a>, <a href="https://www.linkedin.com/in/felix-singerman/"> LinkedIn</a>,<a href="https://facebook.com/flsingerman"> Facebook</a>, <a href="https://stackoverflow.com/users/7371879/felix"> Stack Overflow</a>)</p>
                                 </div>
                             </div>
                         </li>
@@ -157,9 +159,11 @@
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">
-                                        My interest in computing has not been restricted to the classroom and university life. During my studies, I started a company fixing old Apple Computers and reselling them. I learned how to deal and negotiate with people, and how to be creative, troubleshoot and coming up with new ideas. I also learned the difficulties of managing a company, but that hard and well thought out work, can have many rewards. Being a good leader can direct the team to greater success. This practical experience has given me some technical abilities and a good grasp of the command line which will undoubtedly be helpful in my learing.</p>
-                                    <p class="text-muted">
-                                        I enjoy educating myself on current events and learning about what is going on around the world.</p>
+                                        My interest in computing has not been restricted to the classroom and university life. During my studies, I started a company fixing old Apple Computers and reselling them. I learned how to deal and negotiate with people, and how to be creative, troubleshoot and coming up with new ideas. I also learned the difficulties of managing a company, but that hard and well thought out work, can have many rewards. Being a good leader can direct the team to greater success. This practical experience has given me some technical abilities and a good grasp of the command line which will undoubtedly be helpful in my learing.</p><br>
+                                    <ul class="text-muted">
+                                        <li>I enjoy educating myself on current events and learning about what is going on around the world.</li>
+                                        <li>I am currently teaching myself how to play the saxophone. </li>
+                                    </ul>
                                 </div>
                             </div>
                         </li>
@@ -416,7 +420,8 @@
                         <li><a href="https://facebook.com/flsingerman"><i class="fa fa-facebook"></i></a>
                         </li>
                         <li><a href="https://www.linkedin.com/in/felix-singerman/"><i class="fa fa-linkedin"></i></a>
-                        </li>
+                            <li><a href="https://stackoverflow.com/users/7371879/felix"><i class="fa fa-stack-overflow"></i></a>
+                            </li>
                     </ul>
                 </div>
 
@@ -551,9 +556,9 @@
                             <div class="modal-body">
                                 <!-- Project Details Go Here -->
                                 <h2>My Personal Website</h2>
-                                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                                <p class="item-intro text-muted">My Portfolio</p>
                                 <img class="img-responsive img-centered" src="img/portfolio/golden-preview.png" alt="">
-                                <p>I created this website as a personal project. I hope you enjoy!</p>
+                                <p>I created this website as a personal project. I hope you enjoy my portfolio!</p>
 
                                 <strong>You can download the code for this website at</strong><a href="https://github.com/flsing/flsing.github.io"> Github.com</a>.
                                 <ul class="list-inline">
