Added link for stackOverflow

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Hi and welcome to my Website! I am a 3rd year Computer Science Student at the University of Ottawa. I'm a big fan of Scheme, a functional programming language and one of the main dialects of Lisp. I’ve always been extremely interested in computing and logical problem solving. My sister and I were always on our computers growing up, and I always wanted to know how computers worked, why they worked and what else they could do. This interest never left me, and only grew more profound and passionate over time.</p>
+                                    <p class="text-muted">Hi and welcome to my Website! I am a 3rd-year Computer Science Student at the University of Ottawa. I'm a big fan of Scheme, a functional programming language and one of the main dialects of Lisp. I’ve always been extremely interested in computing and logical problem-solving. My sister and I were always on our computers growing up, and I always wanted to know how computers worked, why they worked and what else they could do. This interest never left me, and only grew more profound and passionate over time.</p>
                                     <br>
                                     <p class="text-muted">(You can find me on <a href="https://github.com/flsing/"> Github</a>, <a href="https://www.linkedin.com/in/felix-singerman/"> LinkedIn</a>,<a href="https://facebook.com/flsingerman"> Facebook</a>, <a href="https://stackoverflow.com/users/7371879/felix"> Stack Overflow</a>)</p>
                                 </div>
@@ -116,7 +116,7 @@
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/3.jpg" alt="">
+                                <img class="img-circle img-responsive" src="img/about/bina2.png" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -151,7 +151,7 @@
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/4.jpg" alt="">
+                                <img class="img-circle img-responsive" src="img/about/3.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -159,7 +159,7 @@
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">
-                                        My interest in computing has not been restricted to the classroom and university life. During my studies, I started a company fixing old Apple Computers and reselling them. I learned how to deal and negotiate with people, and how to be creative, troubleshoot and coming up with new ideas. I also learned the difficulties of managing a company, but that hard and well thought out work, can have many rewards. Being a good leader can direct the team to greater success. This practical experience has given me some technical abilities and a good grasp of the command line which will undoubtedly be helpful in my learing.</p><br>
+                                        My interest in computing has not been restricted to the classroom and university life. During my studies, I started a company fixing old Apple Computers and reselling them. I learned how to deal and negotiate with people, and how to be creative, troubleshoot and coming up with new ideas. I also learned the difficulties of managing a company, but that hard and well thought out work can have many rewards. Being a good leader can direct the team to greater success. This practical experience has given me some technical abilities and a good grasp of the command line which will undoubtedly be helpful in my learning.</p><br>
                                     <ul class="text-muted">
                                         <li>I enjoy educating myself on current events and learning about what is going on around the world.</li>
                                         <li>I am currently teaching myself how to play the saxophone. </li>
@@ -450,7 +450,7 @@
                                 <h2>Smart Fridge</h2>
                                 <p class="item-intro text-muted">Smart Refrigerator System</p>
                                 <img class="img-responsive img-centered" src="img/portfolio/smart-fridge.png" alt="">
-                                <p>I created a database system together with Patrick Langis to monitor the contents of a refrigerator using PostgreSQL. Our databse respected all required normal forms. We used Python and the flask framework for the back-end and we edited a bootstrap template for the front-end using HTML and CSS.
+                                <p>I created a database system together with Patrick Langis to monitor the contents of a refrigerator using PostgreSQL. Our database respected all required normal forms. We used Python and the flask framework for the back-end and we edited a bootstrap template for the front-end using HTML and CSS.
                                 </p>
                                 <p>
                                     <strong>Download the Code on github</strong><a href="https://github.com/flsing/CSI2132"> Here</a>
@@ -485,7 +485,7 @@
                                 <h2>Cook Helper Application</h2>
                                 <p class="item-intro text-muted">Munchies: What do you have in your fridge?</p>
                                 <img class="img-responsive img-centered" src="img/portfolio/chef.png" alt="">
-                                <p>The Munchies App was created by Eyob Tilaye, Wilson Ly and Felix Singerman. Munchies was built using Android Studio.</p>
+                                <p>The Munchies App was created by Eyob Tilaye, Wilson Ly, and Felix Singerman. Munchies was built using Android Studio.</p>
                                 <p> Munchies selects and displays recipes that contain ingredients you already have. Munchies obtained results according to relevance (ingredients and category, or type of food).
                                 </p>
 
@@ -522,7 +522,7 @@
                                 <h2>Circle the Dot game</h2>
                                 <p class="item-intro text-muted">Built in Java</p>
                                 <img class="img-responsive img-centered" src="img/portfolio/circle_dot.png" alt="">
-                                <p>Eyob Tilaye and Felix Singerman designed our own version of the popular Circle the Dot game. We implemented the model-view-controller design pattern. We designed the application utilizing event-driven programming. We used a Breadth-First Search algorithm in order to find the shortest path. Simalar examples of the game can be found <a href="http://www.crazygames.com/game/circle-the-cat">here</a>.</p>
+                                <p>Eyob Tilaye and Felix Singerman designed our own version of the popular Circle the Dot game. We implemented the model-view-controller design pattern. We designed the application utilizing event-driven programming. We used a Breadth-First Search algorithm in order to find the shortest path. Similar examples of the game can be found <a href="http://www.crazygames.com/game/circle-the-cat">here</a>.</p>
 
                                 <strong>You can download the code at</strong><a href="https://github.com/flsing/ITI1121"> Github.com</a>.
                                 <ul class="list-inline">
