--- a/index.html
+++ b/index.html
@@ -104,13 +104,13 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>About Me</h4>
+                                    <h4>Hello World</h4>
 
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">Hi and welcome to my Website! I am a 3rd-year Computer Science Student at the University of Ottawa. I'm a big fan of Scheme, a functional programming language and one of the main dialects of Lisp. I’ve always been extremely interested in computing and logical problem-solving. My sister and I were always on our computers growing up, and I always wanted to know how computers worked, why they worked and what else they could do. This interest never left me, and only grew more profound and passionate over time.</p>
                                     <br>
-                                    <p class="text-muted">(You can find me on <a href="https://github.com/flsing/"> Github</a>, <a href="https://www.linkedin.com/in/felix-singerman/"> LinkedIn</a>,<a href="https://facebook.com/flsingerman"> Facebook</a>, <a href="https://stackoverflow.com/users/7371879/felix"> Stack Overflow</a>)</p>
+                                    <p class="text-muted">(You can find me on <a href="https://github.com/flsing/"> Github</a>, <a href="https://www.linkedin.com/in/felix-singerman/"> LinkedIn</a>, <a href="https://facebook.com/flsingerman">Facebook</a>, <a href="https://stackoverflow.com/users/7371879/felix"> Stack Overflow</a>)</p>
                                 </div>
                             </div>
                         </li>
@@ -393,6 +393,9 @@
                                 <div id="success"></div>
                                 <button type="submit" class="btn btn-xl">Send Message</button>
                                 <div class="LI-profile-badge" data-version="v1" data-size="large" data-locale="en_US" data-type="horizontal" data-theme="dark" data-vanity="felix-singerman"><a class="LI-simple-link" href='https://ca.linkedin.com/in/felix-singerman?trk=profile-badge'>Felix Singerman</a></div>
+                                <a href="http://stackoverflow.com/users/7371879/felix">
+<img src="http://stackoverflow.com/users/flair/7371879.png?theme=dark" width="208" height="58" alt="profile for Felix at Stack Overflow, Q&amp;A for professional and enthusiast programmers" title="profile for Felix at Stack Overflow, Q&amp;A for professional and enthusiast programmers">
+</a>
 
 
                             </div>
@@ -409,7 +412,12 @@
     <footer class="bg-light-gray">
         <div class="container">
             <div class="row">
-                <p>FLSingerman@gmail.com</p>
+                
+                 flsingerman@gmail.com
+                <p>fsing047@uottawa.ca</p>
+               
+<!--                <a href="mailto:fsing047@uottawa.ca">fsing047@uottawa.ca</a>-->
+<!--                <p><a href="mailto:flsingerman@gmail.com">FLSingerman@gmail.com</a></p>-->
                 <div class="col-md-4">
                     <span class="copyright">Copyright &copy; 2017 Felix J Singerman</span>
                 </div>
@@ -453,7 +461,7 @@
                                 <p>I created a database system together with Patrick Langis to monitor the contents of a refrigerator using PostgreSQL. Our database respected all required normal forms. We used Python and the flask framework for the back-end and we edited a bootstrap template for the front-end using HTML and CSS.
                                 </p>
                                 <p>
-                                    <strong>Download the Code on github</strong><a href="https://github.com/flsing/CSI2132"> Here</a>
+                                    <strong>Download the Code on github </strong><a href="https://github.com/flsing/CSI2132">Here</a>
                                     <ul class="list-inline">
                                         <li>Date: January 2017 - Present</li>
                                         <li>Client: CSI 2132</li>
@@ -489,7 +497,7 @@
                                 <p> Munchies selects and displays recipes that contain ingredients you already have. Munchies obtained results according to relevance (ingredients and category, or type of food).
                                 </p>
 
-                                <strong>You can download the code</strong><a href="https://github.com/flsing/SEG2105"> here</a>.
+                                <strong>You can download the code </strong><a href="https://github.com/flsing/SEG2105">here</a>.
                                 <ul class="list-inline">
                                     <li>Date: September 2016 - December 2016</li>
                                     <li>Client: SEG 2105</li>
@@ -524,7 +532,7 @@
                                 <img class="img-responsive img-centered" src="img/portfolio/circle_dot.png" alt="">
                                 <p>Eyob Tilaye and Felix Singerman designed our own version of the popular Circle the Dot game. We implemented the model-view-controller design pattern. We designed the application utilizing event-driven programming. We used a Breadth-First Search algorithm in order to find the shortest path. Similar examples of the game can be found <a href="http://www.crazygames.com/game/circle-the-cat">here</a>.</p>
 
-                                <strong>You can download the code at</strong><a href="https://github.com/flsing/ITI1121"> Github.com</a>.
+                                <strong>You can download the code at </strong><a href="https://github.com/flsing/ITI1121">Github.com</a>.
                                 <ul class="list-inline">
                                     <li>Date: January 2016 - April 2016</li>
                                     <li>Client: ITI 1121</li>
@@ -560,7 +568,7 @@
                                 <img class="img-responsive img-centered" src="img/portfolio/golden-preview.png" alt="">
                                 <p>I created this website as a personal project. I hope you enjoy my portfolio!</p>
 
-                                <strong>You can download the code for this website at</strong><a href="https://github.com/flsing/flsing.github.io"> Github.com</a>.
+                                <strong>You can download the code for this website at </strong><a href="https://github.com/flsing/flsing.github.io">Github.com</a>.
                                 <ul class="list-inline">
                                     <li>Date: April 2017 - Present </li>
                                     <li>Client: Myself</li>
