added a little flair

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">About Me</h2>
+                  <h3 class="section-subheading text-muted">&lt / &gt</h3>
                 </div>
             </div>
             <div class="row">
@@ -105,7 +106,6 @@
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <h4>Hello World</h4>
-
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">Hi and welcome to my Website! I am a 3rd-year Computer Science Student at the University of Ottawa. I'm a big fan of Scheme, a functional programming language and one of the main dialects of Lisp. I’ve always been extremely interested in computing and logical problem-solving. My sister and I were always on our computers growing up, and I always wanted to know how computers worked, why they worked and what else they could do. This interest never left me, and only grew more profound and passionate over time.</p>
@@ -183,13 +183,13 @@
 
 
 
-    <!-- Services Section -->
+    <!-- Education Section -->
     <section id="education">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Education</h2>
-                    <h3 class="section-subheading text-muted"></h3>
+                    <h3 class="section-subheading text-muted">&lt / &gt</h3>
                 </div>
             </div>
             <div class="row text-center">
@@ -307,6 +307,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Volunteering & Experience</h2>
+                    <h3 class="section-subheading text-muted">&lt / &gt</h3>
                     <h4 class="service-heading"> Engineering Faculty Council</h4>
                     <h6 class="service-heading">April 2016 – May 2017</h6>
                     <p class="text-muted"> I was elected to represent all undergraduate students of the School of Electrical Engineering and Computer Science at Faculty Council meetings at the University of Ottawa. Responsibilities include casting a vote for program changes in the department of Engineering, budgets, pre-requisites, etc. It’s a role I thoroughly enjoy and gives me much satisfaction as it has helped me with my communication and business skills. My hard working habits and organizational skills, help in balancing my school work, my extracurricular activities and my passion in computing.
@@ -415,8 +416,8 @@
         <div class="container">
             <div class="row">
 
-                flsingerman@gmail.com
-                <p>fsing047@uottawa.ca</p>
+                &lt/flsingerman@gmail.com
+                <p>fsing047@uottawa.ca&gt</p>
 
                 <!--                <a href="mailto:fsing047@uottawa.ca">fsing047@uottawa.ca</a>-->
                 <!--                <p><a href="mailto:flsingerman@gmail.com">FLSingerman@gmail.com</a></p>-->
