new link for smart fridge repo

--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
                                 <p>I created a database system together with Patrick Langis to monitor the contents of a refrigerator using PostgreSQL. Our database respected all required normal forms. We used Python and the flask framework for the back-end and we edited a bootstrap template for the front-end using HTML and CSS.
                                 </p>
                                 <p>
-                                    <strong>Download the Code on github </strong><a href="https://github.com/flsing/CSI2132">Here</a>
+                                    <strong>Download the Code on github </strong><a href="https://github.com/flsing/Smart-Fridge">Here</a>
                                     <ul class="list-inline">
                                         <li>Date: January 2017 - Present</li>
                                         <li>Client: CSI 2132</li>
