--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="google-site-verification" content="FX9sfFnqVJjLLXV4sL8LYIAxaBcvWSeJZ7cJ0F1jjTA" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Welcome to my website! I am a 3rd year Computer Science student and this is my personal website that I set up for fun, I hope you enjoy it. I will continue to update it. ">
+    <meta name="description" content="Welcome to my website! I am a 3rd year Computer Science student and this is my personal website that I set up for fun, I hope you enjoy!!">
     <meta name="author" content="Felix J Singerman">
 
     <title>Felix Singerman</title>
@@ -23,21 +23,17 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 
 
-    <!-- Theme CSS -->
+    <!-- Theme CSS  to be edited-->
     <link href="css/agency.min.css" rel="stylesheet">
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js" integrity="sha384-0s5Pv64cNZJieYFkXYOTId2HMA2Lfb6q2nAcx2n0RTLUnCAoTTsS0nKEO27XyKcY" crossorigin="anonymous"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js" integrity="sha384-ZoaMbDF+4LeFxg6WdScQ9nnR1QC2MIRxA1O9KWEXQwns1G8UNyIEZIQidzb0T1fo" crossorigin="anonymous"></script>
-    <![endif]-->
 
 </head>
 
+
+
 <body id="page-top" class="index">
 
-    <!-- Navigation -->
+    <!-- Navigation Bar-->
     <nav id="mainNav" class="navbar navbar-default navbar-custom navbar-fixed-top">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
@@ -76,24 +72,26 @@
         <!-- /.container-fluid -->
     </nav>
 
+
     <!-- Header -->
     <header>
         <div class="container">
             <div class="intro-text">
-
                 <div class="intro-heading">Felix Singerman</div>
                 <div class="intro-lead-in">Computer Science Student</div>
                 <a href="#about" class="page-scroll btn btn-xl">View More</a>
             </div>
         </div>
     </header>
+
+
     <!-- About Section -->
     <section id="about" class="bg-light-gray">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">About Me</h2>
-                  <h3 class="section-subheading text-muted">&lt / &gt</h3>
+                    <h3 class="section-subheading text-muted">&lt / &gt</h3>
                 </div>
             </div>
             <div class="row">
@@ -108,7 +106,7 @@
                                     <h4>Hello World</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Hi and welcome to my Website! I am a 3rd-year Computer Science Student at the University of Ottawa. I'm a big fan of Scheme, a functional programming language and one of the main dialects of Lisp. I’ve always been extremely interested in computing and logical problem-solving. My sister and I were always on our computers growing up, and I always wanted to know how computers worked, why they worked and what else they could do. This interest never left me, and only grew more profound and passionate over time.</p>
+                                    <p class="text-muted">Welcome to my website! I am a 3rd-year Computer Science Student at the University of Ottawa. I'm a big fan of Scheme, a functional programming language and one of the main dialects of Lisp. I’ve always been extremely interested in computing and logical problem-solving. My sister and I were always on our computers growing up, and I always wanted to know how computers worked, why they worked and what else they could do. This interest never left me, and only grew more profound and passionate over time.</p>
                                     <br>
                                     <p class="text-muted">(You can find me on <a href="https://github.com/flsing/"> Github</a>, <a href="https://www.linkedin.com/in/felix-singerman/"> LinkedIn</a>, <a href="https://facebook.com/flsingerman">Facebook</a>, <a href="https://stackoverflow.com/users/7371879/felix"> Stack Overflow</a>)</p>
                                 </div>
@@ -128,7 +126,7 @@
                                 </div>
                                 <h5 class="subheading">Technologies/Environment</h5>
                                 <div class="timeline-body">
-                                    <p class="text-muted">UNIX/Linux, MAC OS, Windows, PostgreSQL, Flask, UML, Data Structures, Git</p>
+                                    <p class="text-muted">UNIX/Linux, MAC OS, Windows, PostgreSQL, Flask, UML, Data Structures, Git, Bootstrap</p>
                                 </div>
                             </div>
                         </li>
@@ -199,7 +197,7 @@
                     </span>
                     <h4 class="service-heading">University of Ottawa</h4>
                     <h6 class="service-heading">2014 - Present</h6>
-                    <p class="text-muted">Honours Bachelor of Science: Specialization in Computer Science, Management and Entrepreneurship Option. GPA 3.25/4.00.</p>
+                    <p class="text-muted">Honours Bachelor of Science: Specialization in Computer Science, Management and Entrepreneurship Option. GPA 3.33/4.00.</p>
                     <p class="text-muted">
                         <a href="#other"> Elected member of the Engineering Faculty Council.</a>
                     </p>
@@ -230,6 +228,8 @@
             </div>
         </div>
     </section>
+
+
 
     <!-- Portfolio Grid Section -->
     <section id="projects" class="bg-light-gray">
@@ -301,7 +301,9 @@
         </div>
     </section>
 
-    <!-- Services Section -->
+
+
+    <!-- Volunteering and experience Section -->
     <section id="other">
         <div class="container">
             <div class="row">
@@ -325,6 +327,8 @@
             </div>
         </div>
     </section>
+
+
 
     <!-- Clients Aside -->
     <!--
@@ -355,6 +359,8 @@
         </div>
     </aside> 
 --!>
+
+
 
     <!-- Contact Section -->
     <section id="contact">
@@ -393,25 +399,18 @@
                             <div class="col-lg-12 text-center">
                                 <div id="success"></div>
                                 <button type="submit" class="btn btn-xl">Send Message</button>
-                                <div class="LI-profile-badge" data-version="v1" data-size="large" data-locale="en_US" data-type="horizontal" data-theme="dark" data-vanity="felix-singerman"><a class="LI-simple-link" href='https://ca.linkedin.com/in/felix-singerman?trk=profile-badge'>Felix Singerman</a></div>
-<!--
-                                <a href="http://stackoverflow.com/users/7371879/felix">
-                                    <img src="http://stackoverflow.com/users/flair/7371879.png?theme=dark" width="208" height="58" alt="profile for Felix at Stack Overflow, Q&amp;A for professional and enthusiast programmers" title="profile for Felix at Stack Overflow, Q&amp;A for professional and enthusiast programmers">
-                                </a>
--->
-
-
+                                <div class="LI-profile-badge" data-version="v1" data-size="large" data-locale="en_US" data-type="horizontal" data-theme="dark" data-vanity="felix-singerman"><a class="LI-simple-link" href='https://ca.linkedin.com/in/felix-singerman?trk=profile-badge'>Felix Singerman</a>
+                                </div>
                             </div>
-
                         </div>
-
                     </form>
                 </div>
             </div>
-
         </div>
     </section>
 
+
+    <!-- Footer section -->
     <footer class="bg-light-gray">
         <div class="container">
             <div class="row">
@@ -435,13 +434,13 @@
                             </li>
                     </ul>
                 </div>
-
             </div>
         </div>
     </footer>
 
+
+
     <!-- Portfolio Modals -->
-    <!-- Use the modals below to showcase details about your portfolio projects! -->
 
     <!-- Portfolio Modal 1 -->
     <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
