fixed image sizes

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">
-                                        <Strong>English: </Strong>Native or bilingual proficiency</p>
+                                        <Strong>English: </Strong>Native proficiency</p>
                                     <p class="text-muted"><strong>French:</strong> Professional working proficiency</p>
                                     <p class="text-muted">
                                         <Strong>Hebrew: </Strong>Elementary proficiency</p>
@@ -193,7 +193,7 @@
             <div class="row text-center">
                 <div class="col-lg-12">
                     <span class="fa-stack fa-4x">
-                        <img src="img/logos/uottawa.png" class="img-responsive img-centered" alt="">
+                        <img src="img/logos/uottawa.png" class="img-responsive img-centered" alt="University of Ottawa">
                     </span>
                     <h4 class="service-heading">University of Ottawa</h4>
                     <h6 class="service-heading">2014 - Present</h6>
@@ -202,15 +202,15 @@
                         <a href="#other"> Elected member of the Engineering Faculty Council.</a>
                     </p>
                     <p class="text-muted">
-                        Selected Coursework: Data Structures and Algorithms, Databases, Programming Paradigms, Software Engineering, Discrete Math, Discrete Stuctures, Intro to Programming I & II, Digital Systems, Technical Report Writing, Professional Practice in Engineering and Computer Science
+                        Selected Coursework: Data Structures and Algorithms, Databases, Programming Paradigms, Intro to Software Engineering, Discrete Math, Discrete Stuctures, Computer Architecture, Intro to Programming I & II, Digital Systems, Technical Report Writing, Professional Practice in Engineering and Computer Science
                     </p>
                     <p class="text-muted">
-                        Selected Business Coursework: Introduction to Business Management, Marketing, Financial Accounting, Organizational Behaviour
+                        Selected Business Coursework: New Venture Creation, Introduction to Business Management, Marketing, Financial Accounting, Organizational Behaviour
                     </p>
                 </div>
                 <div class="col-lg-12">
                     <span class="fa-stack fa-4x">
-                         <img src="img/logos/mario.jpeg" class="img-responsive img-centered" alt="">
+                         <img src="img/logos/mario.jpeg" class="img-responsive img-centered" alt="Marianopolis College">
                     </span>
                     <h4 class="service-heading">Marianopolis College</h4>
                     <h6 class="service-heading">2012 - 2014</h6>
@@ -219,7 +219,7 @@
                 </div>
                 <div class="col-lg-12">
                     <span class="fa-stack fa-4x">
-                        <img src="img/logos/Herzliah.jpg" class="img-responsive img-centered" alt="">
+                        <img src="img/logos/Herzliah.jpg" class="img-responsive img-centered" alt="Herzliah High School">
                     </span>
                     <h4 class="service-heading">Herzliah High School</h4>
                     <h6 class="service-heading">2006 - 2011</h6>
@@ -240,7 +240,12 @@
                     <h3 class="section-subheading text-muted">Here are some projects that I have done. You can get more information by clicking on them</h3>
                 </div>
             </div>
+
+
             <div class="row">
+
+
+
                 <div class="col-md-4 col-sm-6 portfolio-item">
                     <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
@@ -248,13 +253,17 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/smart-fridge-app.jpg" class="img-responsive" alt="">
+
+                        <img src="img/portfolio/smart-fridge-app.jpg" class="img-responsive" alt="" width="">
                     </a>
                     <div class="portfolio-caption">
+
                         <h4>Smart Refrigerador System</h4>
                         <p class="text-muted">Databases</p>
                     </div>
+
                 </div>
+
                 <div class="col-md-4 col-sm-6 portfolio-item">
                     <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
@@ -262,13 +271,16 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/hat.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/hat.png" class="img-responsive" alt="" width="190">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Cook Helper Application</h4>
                         <p class="text-muted">Software Engineering</p>
                     </div>
                 </div>
+
+
+
                 <div class="col-md-4 col-sm-6 portfolio-item">
                     <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
@@ -276,13 +288,16 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/circle_dot.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/circle_dot.png" class="img-responsive" alt="" width="170">
                     </a>
                     <div class="portfolio-caption">
                         <h4>"Circle the Dot"</h4>
                         <p class="text-muted">Introduction to Computing II</p>
                     </div>
                 </div>
+
+
+
                 <div class="col-md-4 col-sm-6 portfolio-item">
                     <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
@@ -290,7 +305,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/golden.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/golden.png" class="img-responsive" alt="" width="270">
                     </a>
                     <div class="portfolio-caption">
                         <h4>My Website</h4>
@@ -310,6 +325,8 @@
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Volunteering & Experience</h2>
                     <h3 class="section-subheading text-muted">&lt / &gt</h3>
+
+                    
                     <h4 class="service-heading"> Engineering Faculty Council</h4>
                     <h6 class="service-heading">April 2016 – May 2017</h6>
                     <p class="text-muted"> I was elected to represent all undergraduate students of the School of Electrical Engineering and Computer Science at Faculty Council meetings at the University of Ottawa. Responsibilities include casting a vote for program changes in the department of Engineering, budgets, pre-requisites, etc. It’s a role I thoroughly enjoy and gives me much satisfaction as it has helped me with my communication and business skills. My hard working habits and organizational skills, help in balancing my school work, my extracurricular activities and my passion in computing.
@@ -683,7 +700,6 @@
 
         ga('create', 'UA-97389856-1', 'auto');
         ga('send', 'pageview');
-
     </script>
 
 </body>
